    "NVARCHAR2" - there is no "NVARCHAR" on Oracle -
    this remains a slight breakage of the "uppercase types
    always give exactly that" policy.  VARCHAR still 
    generates "VARCHAR", keeping with the policy.   If
    Oracle were to ever define "VARCHAR" as something 
    different as they claim (IMHO this will never happen), 
    the type would be available.  [ticket:2252]

- ext
  - Added local_attr, remote_attr, attr accessors
    to AssociationProxy, providing quick access
    to the proxied attributes at the class
    level. [ticket:2236]

  - Changed the update() method on association proxy
    dictionary to use a duck typing approach, i.e.
    checks for "keys", to discern between update({}) 
    and update((a, b)).   Previously, passing a 
    dictionary that had tuples as keys would be misinterpreted
    as a sequence. [ticket:2275]

- examples
  - Adjusted dictlike-polymorphic.py example
    to apply the CAST such that it works on 
    PG, other databases.  [ticket:2266]
    Also in 0.6.9.

0.7.2
=====
- orm
  - Feature enhancement: joined and subquery
    loading will now traverse already-present related
    objects and collections in search of unpopulated
    attributes throughout the scope of the eager load
    being defined, so that the eager loading that is
    specified via mappings or query options
    unconditionally takes place for the full depth,
    populating whatever is not already populated.
    Previously, this traversal would stop if a related
    object or collection were already present leading
    to inconsistent behavior (though would save on
    loads/cycles for an already-loaded graph). For a
    subqueryload, this means that the additional
    SELECT statements emitted by subqueryload will
    invoke unconditionally, no matter how much of the
    existing graph is already present (hence the
    controversy). The previous behavior of "stopping"
    is still in effect when a query is the result of